Added posts scaffold

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
       </ul>
       
       <h1>
-        <%= link_to "crubmlr", "/" %>
+        <%= link_to "crumblr", "/" %>
         <small>// stay tasty</small>
       </h1>
       
